# NTUB_Donate

./: .editorconfig  .gitignore  README.md  docker-compose.yml
backend/: .env.development  .env.production  Dockerfile  alembic.ini  database.db  log.ini  main.py  pyproject.toml  requirements.txt  wait-for-postgres.sh
backend/app/application/admin/endpoints/: __init__.py  announcement.py  auth.py  document.py  donation.py  donation_purpose.py  excel.py  ftp.py  news.py  regulation.py  test.py  unit.py  user.py
backend/app/application/admin/schemas/: announcement.py  auth.py  document.py  donation.py  donation_purpose.py  news.py  paginated.py  regulation.py  unit.py  user.py
backend/app/application/client/endpoints/: __init__.py  address.py  announcement.py  barcode.py  document.py  donation.py  donation_purpose.py  news.py  regulation.py  unit.py  user.py
backend/app/application/client/schemas/: address.py  barcode.py  document.py  donation.py  donation_purpose.py  news.py  unit.py  user.py
backend/app/application/endpoints/: __init__.py  address.py  asset.py  barcode.py  donation.py  donation_purpose.py  hero.py  news.py  unit.py  user.py  vulnerability_threat.py
backend/app/application/schema/: address.py  barcode.py  donation.py  donation_purpose.py  news.py  unit.py  user.py
backend/app/application/utils/schemas/: announcement.py  donation_purpose.py  regulation.py  unit.py
backend/app/core/: config.py  database.py  settings.py
backend/app/domain/models/: __init__.py  announcement.py  asset.py  domcument.py  donation.py  donation_purpose.py  hero.py  news.py  regulation.py  unit.py  user.py  vulnerability_threat.py
backend/app/domain/services/: address.py  auth.py  barcode.py  donation_purpose.py  excel_export.py  ftp_service.py
backend/app/infrastructure/migrations/: env.py
backend/app/infrastructure/migrations/versions/: 0503b8def55b_init_migration.py  3109808c5e87_新增相關法規資料表.py  3eb4f25da2f3_init_migration.py  4c05a6c307ab_add_field_in_user_donation.py  59837a8da896_新增匯入日期欄位.py  5a7286d1450a_init_migration.py  (+12 more)
backend/app/infrastructure/repositories/: announcement.py  asset.py  base.py  document.py  donation.py  donation_purpose.py  hero.py  news.py  regulation.py  unit.py  user.py  vulnerability_threat.py
backend/tests/: conftest.py  test_admin_api.py  test_client_address_api.py  test_client_user_api.py
frontend/: Dockerfile  (+11 more)
(+134 files in other folders)
